@@ -1,3 +1,4 @@
+- delete now uses row_id instead of url
 - add Export to M3U
 
 2.1.3
